add scholar route GET
