# docs/swagger.json
@@ -18,6 +18,47 @@
     "host": "localhost:8080",
     "basePath": "/api",
     "paths": {
+        "/mahasiswa": {
+            "get": {
+                "description": "mengambil data mahasiswa",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "mahasiswa"
+                ],
+                "summary": "menampilkan semua data mahasiswa",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.Scholar"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/handlers.HTTPError"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/handlers.HTTPError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/handlers.HTTPError"
+                        }
+                    }
+                }
+            }
+        },
         "/mahasiswa/{id}": {
             "get": {
                 "description": "mengambil data berdasarkan NIM",
@@ -86,14 +127,23 @@
         "model.Scholar": {
             "type": "object",
             "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "gender": {
+                    "type": "string"
+                },
                 "nama": {
                     "type": "string"
                 },
                 "nim": {
-                    "type": "integer"
+                    "type": "string"
                 },
-                "semester": {
-                    "type": "integer"
+                "prodi": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "string"
                 }
             }
         }
